--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>TFVR dev guides</title>
+    <title>TFVR dev guide site</title>
     <link rel="icon" type="image/x-icon" href="../devtfvr_small.png">
 </head>
 <body>
