fix index.html not having a icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <title>TFVR dev guide site</title>
-    <link rel="icon" type="image/x-icon" href="../devtfvr_small.png">
+    <link rel="icon" type="image/x-icon" href="devtfvr_small.png">
 </head>
 <body>
     <div class="brickstop">
