halfway there with the porting guide

--- a/becomingdev/becomedeveloper.html
+++ b/becomingdev/becomedeveloper.html
@@ -10,8 +10,9 @@
         </a>
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
-            <h1>Becoming a dev:</h1>
-            <p>this is a unfinished guide!</p>
+            <h1>Becoming an offical developer:</h1>
+            <p>Make some maps and then ask nicely, well basically</p>
+            <p>thanks for coming to my ted talk!</p>
         </div>
         <div class="footer">
             
