--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <h1>Welcome to the tfvr developer guide site thingy™</h1>
             <p>Guides:</p>
             <a href="installingmodkit/modkit.html">installing the modkit</a> <br>
-            <a href="mapporting/mapporting.html">porting a map</a>
+            <a href="mapporting/mapporting.html">porting a map</a> <br>
+            <a href="becomingdev/becomedeveloper.html">Becoming an offical developer</a>
             <!-- TODO: add credits for the paper image and other assets -->
         </div>
     </div>
