--- a/installingmodkit/modkit.html
+++ b/installingmodkit/modkit.html
@@ -23,7 +23,7 @@
                 Epic games: <a href="https://www.epicgames.com/id/login">epicgames.com/id/login</a>
             </p>
             <h2>2. Linking your accounts</h2>
-            go to your account settings on <strong>epic games</strong>, and link your github account
+            go to your account settings on <strong>epic games</strong>, and link your github account <br>
             <img src="images/link.png" style="width: 60%; max-width: 25cm;">
             <p>You will now recieve an invitation <strong>on github</strong>, check your notifications</p>
             <img src="images/ghinvite.png" style="width: 95%; max-width: 25cm;">
