--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             <img src="developerstfvrbig.png" style="margin-left: auto;margin-right: auto;width: 75%;display: block;">
             
             <h1>Welcome to the tfvr developer guide site thingy™</h1>
+            <div class="note"><p>This is still <strong>Work in progress</strong>, some guides are unfinished.</p>
+            <p>if a guide is too unclear or you just need help, send a message in #mini-dev-lounge on discord!(minidev role required)</p></div>
             <p>Guides:</p>
             <a href="installingmodkit/modkit.html">installing the modkit</a> <br>
             <a href="mapporting/mapporting.html">porting a map</a> <br>
