--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <link rel="stylesheet" href="style.css">
     <title>TFVR dev guide site</title>
     <link rel="icon" type="image/x-icon" href="devtfvr_small.png">
+    <meta content="Developers TFVR guides" property="og:title" />
+    <meta content="Guides to develop TFVR" property="og:description" />
+    <meta content="https://realbucketofchicken.github.io/tfvrguides/index.html" property="og:url" />
+    <meta content="https://realbucketofchicken.github.io/tfvrguides/devtfvr_small.png" property="og:image" />
+    <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <div class="brickstop">
