--- a/installingmodkit/modkit.html
+++ b/installingmodkit/modkit.html
@@ -3,6 +3,11 @@
     <link rel="stylesheet" href="../style.css">
     <title>installing the modkit</title>
     <link rel="icon" type="image/x-icon" href="../devtfvr_small.png">
+    <meta content="Installing the modkit" property="og:title" />
+    <meta content="a guide on how to install the contractors modkit" property="og:description" />
+    <meta content="https://realbucketofchicken.github.io/tfvrguides/index.html" property="og:url" />
+    <meta content="https://realbucketofchicken.github.io/tfvrguides/devtfvr_small.png" property="og:image" />
+    <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <a href="../index.html">
