--- a/installingmodkit/modkit.html
+++ b/installingmodkit/modkit.html
@@ -41,11 +41,11 @@
             </div>
             <p>download it <a href="https://github.com/kcmonkey1992/ContractorsVRModKit/releases">here</a></p>
             <p>You will see alot of files, you can ignore the source code zip</p>
-            <p>it is important to note that the files start with .zip and end with .z14</p>
+            <p>it is important to note that the files start with .zip and end with .z13(or z14 for the old modkit version)</p>
             <img src="images/files.png" style="width: 95%; max-width: 15cm;">
             <div class="note">
                 <strong>NOTE</strong><br>
-                Confirm you download <strong>every</strong> zip, if one is missing you might have to click on show more in the file section
+                Confirm you download <strong>every</strong> zip, if one is missing you might have to click on show more in the file section, the screenshot is for the old modkit, the new version only goes up to .z13
             </div>
             <h2>4. Unzipping the zip files</h2>
             <p>you will need a unzipper that supports unzipping multiple zip files as one, if the unzipper you currently use dosent support it i would recommend using <a href="https://www.7-zip.org/">7-zip</a></p>
