--- a/becomingdev/becomedeveloper.html
+++ b/becomingdev/becomedeveloper.html
@@ -15,7 +15,7 @@
         </a>
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
-            <h1>Becoming an offical developer:</h1>
+            <h1>Getting access to our SDK:</h1>
             <p>Make some maps and then ask nicely, well basically</p>
             <p>thanks for coming to my ted talk!</p>
         </div>
