--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
+    <script src="Nope.js"></script>
     <div class="brickstop">
         <div class="middle">
             <img src="developerstfvrbig.png" style="margin-left: auto;margin-right: auto;width: 75%;display: block;">
@@ -20,7 +21,8 @@
             <p>Guides:</p>
             <a href="installingmodkit/modkit.html">installing the modkit</a> <br>
             <a href="mapporting/mapporting.html">porting a map</a> <br>
-            <a href="becomingdev/becomedeveloper.html">Becoming an offical developer</a>
+            <a href="becomingdev/becomedeveloper.html">Becoming an offical developer</a> <br>
+            <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
             <!-- TODO: add credits for the paper image and other assets -->
         </div>
     </div>
