i keep forgetting to save

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Guides:</p>
             <a href="installingmodkit/modkit.html">installing the modkit</a> <br>
             <a href="mapporting/mapporting.html">porting a map</a> <br>
-            <a href="becomingdev/becomedeveloper.html">Becoming an offical developer</a> <br>
+            <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
             <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
             <!-- TODO: add credits for the paper image and other assets -->
         </div>
