add downloads for merge scripts

--- a/mapporting/mapporting.html
+++ b/mapporting/mapporting.html
@@ -3,6 +3,11 @@
     <link rel="stylesheet" href="../style.css">
     <title>Porting a map</title>
     <link rel="icon" type="image/x-icon" href="../devtfvr_small.png">
+    <meta content="Porting a map" property="og:title" />
+    <meta content="a guide on how to port a map from tf2 to TFVR" property="og:description" />
+    <meta content="https://realbucketofchicken.github.io/tfvrguides/index.html" property="og:url" />
+    <meta content="https://realbucketofchicken.github.io/tfvrguides/devtfvr_small.png" property="og:image" />
+    <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <a href="../index.html">
@@ -55,6 +60,8 @@
             <p>Now you need to select all displacement meshes(they are in a collection) and right click and go on shade smooth</p>
             <img src="images/shadesmooth.png">
             <p>now you need to split your meshes UNFINISHED UNFINISHED UNFINISHED!!!</p>
+            <a href="scripts/split_mesh_into_chunks.py" download>download split chunks script</a> <br>
+            <a href="scripts/merge_meshes_into_chunks.py" download>download merge meshes script</a>
             <p>---</p>
             <p>Select the skybox and go into wireframe rendering. now, while holding shift, you need to select the skybox camera object and then go to object->transform VMF 3D sky</p>
             <img src="images/transformsky.png">
@@ -71,6 +78,7 @@
             <img src="images/Datasmithimport.png" style="max-height: 20cm; width: auto;">
             <p>Now fix any black materials if you are not using mano’s custom map shaders in the master</p>
             <p>this guide is incomplete, further steps are detailed in the original <a href="https://docs.google.com/document/d/1erP_TtVvz7SknzIwAloByNWpJUQqwdYklYgV86sYkeU">google doc</a></p>
+            
         </div>
         <div class="footer">
             
