--- a/becomingdev/becomedeveloper.html
+++ b/becomingdev/becomedeveloper.html
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="../style.css">
     <title>Becoming a dev</title>
     <link rel="icon" type="image/x-icon" href="../devtfvr_small.png">
-    <meta content="how 2 becom dev" property="og:title" />
-    <meta content="a guide on how to become a developer" property="og:description" />
+    <meta content="How to get our sdk" property="og:title" />
+    <meta content="a guide on how to get access to the tfvr sdk" property="og:description" />
     <meta content="https://realbucketofchicken.github.io/tfvrguides/index.html" property="og:url" />
     <meta content="https://realbucketofchicken.github.io/tfvrguides/devtfvr_small.png" property="og:image" />
     <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
