--- a/installingmodkit/modkit.html
+++ b/installingmodkit/modkit.html
@@ -52,12 +52,13 @@
             <p>to unzip with 7-zip, select all files and right click</p>
             <img src="images/unzip.png" style="width: 95%; max-width: 15cm;">
             <p>(this might look a little different than what you have, the principle is the same)</p>
-            <h2>Opening the mod project</h2>
+            <h2>5. Opening the mod project</h2>
+            <div class="note"><strong>NOTE:</strong><br><p>This might take a very long time! unreal engine is slow</p></div>
             <p>before we can open the mod project, we actually need to launch the engine atleast once, to do so navigate to <code>[where you installed the modkit]\ModEngine\Engine\Binaries\Win64</code> and launch UE4Editor.exe</p>
             <img src="images/editor.png" style="width: 95%; max-width: 15cm;">
             <p>If it's the first time you use the modkit, click on "More"->"Browse"</p>
             <img src="images/moreproject.png" style="width: 95%; max-width: 15cm;">
-            <p>Then select the Mod Project file(<code>Contractors_UE4_22.uproject</code>) that is located at <code>ModKit_0.93.0\ModProject\</code></p>
+            <p>Then select the Mod Project file(<code>Contractors_UE4_22.uproject</code>) that is located at <code>[where you installed the modkit]\ModProject\</code></p>
             <img src="images/modproject.png" style="width: 95%; max-width: 15cm;">
             <p>You're finally done, you can start making mods now!</p>
             <button onclick="window.location.href='../index.html'";>Other guides</button>
