ANYTHING BUT WORKING ON SPY

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="mapporting/mapporting.html">porting a map</a> <br>
             <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
             <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
-            <img src="tf2-tf2-spy.gif" style="display: none;" id="spyscare">
+            <img src="tf2-tf2-spy.gif" style="display: none; width: 10%; margin-left: auto;margin-right: auto;" id="spyscare">
             <!-- TODO: add credits for the paper image and other assets -->
         </div>
     </div>
