--- a/installingmodkit/modkit.html
+++ b/installingmodkit/modkit.html
@@ -61,7 +61,7 @@
             <p>Then select the Mod Project file(<code>Contractors_UE4_22.uproject</code>) that is located at <code>[where you installed the modkit]\ModProject\</code></p>
             <img src="images/modproject.png" style="width: 95%; max-width: 15cm;">
             <p>You're finally done, you can start making mods now!</p>
-            <button onclick="window.location.href='../index.html'";>Other guides</button>
+            <button onclick="window.location.href='../index.html'">Other guides</button>
         </div>
     <div class="footer"></div>
 </body>
