dosent like javascript files ig

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-    <script src="Nope.js"></script>
+    <script>function Nope(){
+    var audio = new Audio('Syrsa - RMX - Surprise.ogg')
+    audio.play()
+    
+    var x = document.getElementById("spyscare");
+    if (x.style.display === "none"){
+        x.style.display = "block";
+    }
+}</script>
     <div class="brickstop">
         <div class="middle">
             <img src="developerstfvrbig.png" style="margin-left: auto;margin-right: auto;width: 75%;display: block;">
