linux and mapping updates

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <div class="note"><p>This is still <strong>Work in progress</strong>, some guides are unfinished.</p>
             <p>if a guide is too unclear or you just need help, send a message in #mini-dev-lounge on discord!(minidev role required)</p></div>
             <p>Guides:</p>
-            <a href="installingmodkit/modkit.html">installing the modkit</a> <br>
-            <a href="mapporting/mapporting.html">porting a map</a> <br>
+            <a href="installingmodkit/modkit.html">Installing the modkit</a> <br>
+            <a href="linux/linux.html"> Modding on linux</a> <br>
+            <a href="mapporting/mapporting.html">Porting a map</a> <br>
             <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
             <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
             <img src="tf2-tf2-spy.gif" style="display: none; width: 10%; margin-left: auto;margin-right: auto;" id="spyscare">
