--- a/linux/linux.html
+++ b/linux/linux.html
@@ -16,6 +16,7 @@
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
             <h1>Modding on linux:</h1>
+            <div class="warning"><strong>WARNING:</strong><p>Using linux is unstable and buggy at times, only do this if you <i>really</i> hate windows</p></div>
             <p>yes, we got these kinds of nerds here, welcome</p>
             <p>im gonna expect you to be a bit more technically literate</p>
             <h2>Requirements of the editor</h2>
@@ -41,6 +42,26 @@
             <h2>Issues, notes and workarounds, Please read</h2>
             <h3>Changing the Gamemode override in world settings freezes the editor</h3>
             <p>patience my friend, it really might take an hour, you never know /srs</p>
+            <h3>The editor feels laggy</h3>
+            <p>i know</p>
+            <h3>I cant drag and drop files into unreal</h3>
+            <p>it dosent work, yeah, a workaround is the following:</p>
+            <p>right click in the unreal file explorer and select the import option</p>
+            <p>under my pc select the Z: drive(its /(root) under the hood) and browse to <code>/home/yourusername/</code> if the file youre importing is in your home directory</p>
+            <p>or if the file is on an external drive go to /run/media/yourusername/yourdrive/ and locate the file</p>
+            <h3>The modkit keeps Crashing, what do i do?</h3>
+            <div class="note"><p>NOTE:</p><p>Ive had issues with crashing on my previous pc which had a nvidia graphics card so that might be an contributing factor</p></div>
+            <p>try restarting the modkit or your pc, for me it crashed the first times i launched the modkit but then never happened again</p>
+            <br>
+            <p>shut down steam if its running</p>
+            <p>launch steam in a terminal by using the steam "command"</p>
+            <p>launch the editor and use it until it crashes</p>
+            <p>see if theres anything useful in the console</p>
+            <p>-> using this you might be able to debug the issue</p>
+            <h3>my gizmos are tweaking.</h3>
+            <p>yup</p>
+            <h3>I cant package mods?</h3>
+            <p>this seems unfixable when running under an compatability layer, try a virtual machine or something like winboat for better integartion</p>
 
         </div>
     </div>
