--- a/index.html
+++ b/index.html
@@ -15,24 +15,31 @@
     audio.play()
     
     var x = document.getElementById("spyscare");
+    var y = document.getElementById("spyscare2");
     if (x.style.display === "none"){
         x.style.display = "block";
+        y.style.display = "block";
     }
 }</script>
     <div class="brickstop">
         <div class="middle">
             <img src="developerstfvrbig.png" style="margin-left: auto;margin-right: auto;width: 75%;display: block;">
             
-            <h1>Welcome to the tfvr developer guide site thingy™</h1>
+            <h1>Welcome to the tfvr developer guides </h1>
             <div class="note"><p>This is still <strong>Work in progress</strong>, some guides are unfinished.</p>
             <p>if a guide is too unclear or you just need help, send a message in #mini-dev-lounge on discord!(minidev role required)</p></div>
             <p>Guides:</p>
+            <h3>Modkit related</h3>
             <a href="installingmodkit/modkit.html">Installing the modkit</a> <br>
             <a href="linux/linux.html"> Modding on linux</a> <br>
+            <h3>Mapping related</h3>
             <a href="mapporting/mapporting.html">Porting a map</a> <br>
             <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
+            <h3>Other</h3>
+            <a href="credits/credits.html">View Credits</a> <br>
             <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
             <img src="tf2-tf2-spy.gif" style="display: none; width: 10%; margin-left: auto;margin-right: auto;" id="spyscare">
+            <p id="spyscare2" style="display: none;">u just got bu77secksd!1!</p>
             <!-- TODO: add credits for the paper image and other assets -->
         </div>
     </div>
