--- a/credits/credits.html
+++ b/credits/credits.html
@@ -16,8 +16,8 @@
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
             <h1>Credits:</h1>
-            <p>Iconicplushstars - for writing the original mapping guide</p>
-            <p>ambientCG - the paper texture in the background</p>
+            <p><strong>Iconicplushstars</strong> - for writing the original mapping guide</p>
+            <p><strong>ambientCG</strong> - the paper texture in the background</p>
             <a href="https://www.youtube.com/watch?v=YKMIyj3Wpaw">Syrsa - Surprise Buttsecks</a> - the song used in a secret
             <p>me, bucket of chicken i guess - making this shitty website</p>
 
