--- a/mapporting/mapporting.html
+++ b/mapporting/mapporting.html
@@ -18,8 +18,8 @@
             <h1>Porting a map:</h1>
             <div class="note">
                 <strong>NOTE:</strong>
-                <p>this is a <strong>unfinished</strong> guide!</p>
-                ask for help on discord
+                <p>this guide might not be intuitive in some parts yet!</p>
+                ask for help on discord, you can ping me(bucket of chicken) or iconicplushstars
             </div>
             <h2>1. Prerequisites</h2>
             <p>Install team fortress 2 on steam if you don't already have it(its free!)</p>
@@ -77,7 +77,7 @@
             <p>Run the fixmodelnames script (and if you have mano's custom source io, also run his clearmaterials.py)</p>
             <p>once that is done select all objects in <strong>ONE</strong> collection and export them as udatasmith with <strong>selected objects only</strong> enabled, repeat this for all collections</p>
             <img src="images/ExportDatasmith.png">
-            <p>Halfway done! only 1% survive this far!(i think)</p>
+            <p>Congrats, you are done with blender(<i>in this guide</i>)! only 1% survive this far!(i think)</p>
             
             <h2>Part two: She unreal on my engine</h2>
             <p>If you havent already, make a new map mod in unreal engine</p>
@@ -89,7 +89,9 @@
             <img src="images/Datasmithimport.png" style="max-height: 20cm; width: auto;">
             <p>Now fix any black materials if you didnt use mano's SourceIO</p>
 
-            <p>this guide is incomplete, further steps are detailed in the original <a href="https://docs.google.com/document/d/1erP_TtVvz7SknzIwAloByNWpJUQqwdYklYgV86sYkeU">google doc</a>, please annoy iconicplushstars on discord for help</p>
+            <p>Now you have your map imported in unreal, there are however several things you can & need to do.</p>
+            <p>find more guides on the homepage</p>
+            <a href="https://docs.google.com/document/d/1erP_TtVvz7SknzIwAloByNWpJUQqwdYklYgV86sYkeU">Or take a look at the old mapping guide</a>
             
         </div>
         <div class="footer">
