few more guides and fixes

--- a/credits/credits.html
+++ b/credits/credits.html
@@ -22,5 +22,8 @@
             <p>me, bucket of chicken i guess - making this shitty website</p>
 
         </div>
+        <div class="footer">
+            
+        </div>
     </div>
 </body>
