--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             <a href="installingmodkit/modkit.html">Installing the modkit</a> <br>
             <a href="linux/linux.html"> Modding on linux</a> <br>
             <h3>Mapping related</h3>
-            <a href="mapporting/mapporting.html">Porting a map</a> <br>
+            <a href="maps/mapporting/mapporting.html">Porting a map</a> <br>
+            <a href="maps/MapLighting/lighting.html">Getting the lighting right</a> <br>
             <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
+            <h3>Troubleshooting</h3>
+            <a href="FilePathsTooLong/toolong.html">(file) Paths are too long!</a>
             <h3>Other</h3>
             <a href="credits/credits.html">View Credits</a> <br>
             <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
