--- a/linux/linux.html
+++ b/linux/linux.html
@@ -64,5 +64,8 @@
             <p>this seems unfixable when running under an compatability layer, try a virtual machine or something like winboat for better integartion</p>
 
         </div>
+        <div class="footer">
+            
+        </div>
     </div>
 </body>
