--- a/maps/mapporting/mapporting.html
+++ b/maps/mapporting/mapporting.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../../style.css">
     <title>Porting a map</title>
-    <link rel="icon" type="image/x-icon" href="../devtfvr_small.png">
+    <link rel="icon" type="image/x-icon" href="../../../devtfvr_small.png">
     <meta content="Porting a map" property="og:title" />
     <meta content="a guide on how to port a map from tf2 to TFVR" property="og:description" />
     <meta content="https://realbucketofchicken.github.io/tfvrguides/index.html" property="og:url" />
@@ -10,8 +10,8 @@
     <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-    <a href="../index.html">
-            <img src="../devtfvr_small.png" class="home" alt="return to home">
+    <a href="../../../index.html">
+            <img src="../../../devtfvr_small.png" class="home" alt="return to home">
         </a>
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
@@ -86,11 +86,11 @@
             <p>now one by one import each udatasmith file</p>
             <img src="images/datasmithfiles.png">
             <p>select your mod and import</p>
-            <img src="images/Datasmithimport.png" style="max-height: 20cm; width: auto;">
+            <img src="images/Datasmithimport.png" style="max-width: 20cm;">
             <p>Now fix any black materials if you didnt use mano's SourceIO</p>
 
-            <p>Now you have your map imported in unreal, there are however several things you can & need to do.</p>
-            <p>find more guides on the homepage</p>
+            <p>Now you have your map imported in unreal, you arent done yet, there are however several things you can & need to do.</p>
+            <p>find more guides on the <a href="../../index.html">homepage</a></p>
             <a href="https://docs.google.com/document/d/1erP_TtVvz7SknzIwAloByNWpJUQqwdYklYgV86sYkeU">Or take a look at the old mapping guide</a>
             
         </div>
