--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             <h1>Welcome to the tfvr developer guides </h1>
             <div class="note"><p>This is still <strong>Work in progress</strong>, some guides are unfinished.</p>
-            <p>if a guide is too unclear or you just need help, send a message in #mini-dev-lounge on discord!(minidev role required)</p></div>
+            <p>if a guide is too unclear or you just need help, send a message in <a href="https://canary.discord.com/channels/1022524842144190495/1163877043633651742">#mini-dev-lounge</a> on discord!(minidev role required)</p></div>
             <p>Guides:</p>
             <h3>Modkit related</h3>
             <a href="installingmodkit/modkit.html">Installing the modkit</a> <br>
