--- a/maps/mapporting/mapporting.html
+++ b/maps/mapporting/mapporting.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../../../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <title>Porting a map</title>
-    <link rel="icon" type="image/x-icon" href="../../../devtfvr_small.png">
+    <link rel="icon" type="image/x-icon" href="../../devtfvr_small.png">
     <meta content="Porting a map" property="og:title" />
     <meta content="a guide on how to port a map from tf2 to TFVR" property="og:description" />
     <meta content="https://realbucketofchicken.github.io/tfvrguides/index.html" property="og:url" />
@@ -10,8 +10,8 @@
     <meta content="#bd3a97" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-    <a href="../../../index.html">
-            <img src="../../../devtfvr_small.png" class="home" alt="return to home">
+    <a href="../../index.html">
+            <img src="../../devtfvr_small.png" class="home" alt="return to home">
         </a>
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
