--- a/gizmos/gizmos.html
+++ b/gizmos/gizmos.html
@@ -18,7 +18,7 @@
             <h1>Fixing the gizmos:</h1>
             <p>The unreal editor is a broken mess, as such its not unlikely that all of your gizmos will flicker and be offset alot</p>
             <p>This is stupid and annoying</p>
-            <p>Now, how do you set the RHI to Vulkan?</p>
+            <p>Now, how do you fix this?</p>
             <code>settings > Preview rendering level > Android Vulkan</code>
             <video src="fixgizmo.mp4" controls></video>
             <p>You can also try launching the engine with the launch argument <code>-vulkan</code>, while it always crashes for me it might be different for you</p>
