--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
             <h3>Troubleshooting</h3>
             <a href="FilePathsTooLong/toolong.html">(file) Paths are too long!</a> <br>
-            <a href="gizmos/gizmos.html">Fix the gixmos</a>
+            <a href="gizmos/gizmos.html">Fix the gizmos</a>
             <h3>Other</h3>
             <a href="credits/credits.html">View Credits</a> <br>
             <a onclick="Nope()" class="clickable" ><u>Playing as spy</u></a>
