another grammar mistake

--- a/maps/mapporting/mapporting.html
+++ b/maps/mapporting/mapporting.html
@@ -89,7 +89,7 @@
             <img src="images/Datasmithimport.png" style="max-width: 20cm;">
             <p>Now fix any black materials if you didnt use mano's SourceIO</p>
 
-            <p>Now you have your map imported in unreal, you arent done yet, there are however several things you can & need to do.</p>
+            <p>Now you have your map imported in unreal, you arent done yet though, there are several things you can & need to do.</p>
             <p>find more guides on the <a href="../../index.html">homepage</a></p>
             <a href="https://docs.google.com/document/d/1erP_TtVvz7SknzIwAloByNWpJUQqwdYklYgV86sYkeU">Or take a look at the old mapping guide</a>
             
