--- a/maps/MapLighting/lighting.html
+++ b/maps/MapLighting/lighting.html
@@ -16,13 +16,8 @@
     <div class="brickstop">
         <div class="middle" style="margin-top: 0;">
             <h1>Getting the Lighting right:</h1>
-            <h2>Sun (Directional Light) - Static</h2>
-            <code>Source Soft Angle = 10</code><br>
-            <code>Indirect Lighting Intensity = 2</code><br>
-            <code>Light Source Angle = 10</code><br>
-            <code>Shadow Exponent = 5</code><br>
             <h2>SkyLight - Static</h2>
-            <code>Cubemap resolution = 64</code> (can be set higher if reflections turn purple-ish) <br>
+            <code>Cubemap resolution = 128</code> <br>
             <code>Sky Distance Threshold = 1</code><br>
             <code>Intensity Scale = 4</code>(depends on the map, as this is how much light the sky casts on the world)<br>
             <code>Light Color = white</code>(change it if you want for stylistic reasons)
@@ -31,8 +26,6 @@
             <p>Use Sphere Reflection Captures for exterior spaces</p>
             <p>Use Box Reflection Captures for interior spaces</p>
             <p>Reflection Captures make reflections more accurate within the space they cover</p>
-            <h2>How to fix the purple tint in your map</h2>
-            <p>Increase the skylight res</p>
         </div>
         <div class="footer">
             
