--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="maps/mapporting/mapporting.html">Porting a map</a> <br>
             <a href="maps/MapLighting/lighting.html">Getting the lighting right</a> <br>
             <a href="becomingdev/becomedeveloper.html">Getting access to our SDK</a> <br>
+            <a href="maps/sublevels/sublevels.html">Managing Sublevels</a>
             <h3>Troubleshooting</h3>
             <a href="FilePathsTooLong/toolong.html">(file) Paths are too long!</a> <br>
             <a href="gizmos/gizmos.html">Fix the gizmos</a>
